# priobike-poi-service

./: Dockerfile  README.md  dev.env  docker-compose.test.yml  docker-compose.yml  example-gh-instruction.json  example-poi.json  example-route-dresden1.json  example-route-dresden2.json  example-route-dresden3.json  example-route.json  example-vote.json  pyproject.toml  run-preheating.sh  sample-construction-sites-v2.geojson  sort-tags.py  wait-for-postgres.sh
.github/workflows/: nightly.yaml  on-push-main.yaml  on-push-release.yaml  on-push-stable.yaml  on-push-tag-v.yaml  on-push.yaml  publish.yaml  test.yaml
backend/backend/: settings.py  urls.py  views.py
backend/backend/management/commands/: import_constructions.py
backend/construction/: admin.py  apps.py  models.py  urls.py  views.py
backend/construction/management/commands/: import_constructions.py  import_constructions_overpass.py
backend/construction/migrations/: 0001_initial.py
backend/data/: BikeITRight_Project_aktualisiert.geojson
backend/poi/: admin.py  apps.py  models.py  urls.py  views.py
backend/poi/management/commands/: cluster.py  import_bike_it_right.py
backend/pois/: admin.py  apps.py  models.py  openstreetbrowser-osm-tags-de.json  osm-tags-de.json  urls.py  views.py
backend/pois/management/commands/: import_accident_hotspots.py  import_constructions.py  import_constructions_overpass.py  import_green_waves.py  import_landmarks.py  (+1 more)
backend/pois/migrations/: 0001_initial.py  0002_poiline.py  0003_landmark.py  0004_landmark_tags_alter_landmark_id.py  0005_landmark_name.py
nginx_inner/conf.d/: default.conf
