[tool.poetry]
name = "priobike-poi-service"
version = "1.0.0"
description = "A microservice to obtain Points of Interest (POI)."
authors = ["Charles Krüger <charles.krueger@mailbox.tu-dresden.de>"]

[tool.poetry.dependencies]
python = "3.9.19"
Django = "^4.0.5"
psycopg2 = "^2.9.3"
gunicorn = "^20.1.0"
scipy = "^1.11.0"
numpy = "^1.25.0"
shapely = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
