[tool.poetry]
name = "priobike-poi-service"
version = "1.0.0"
description = "A microservice to obtain Points of Interest (POI)."
authors = ["Charles Krüger <charles.krueger@mailbox.tu-dresden.de>"]

[tool.poetry.dependencies]
python = "3.11.8"
Django = "^5.0.3"
psycopg2 = "^2.9.9"
gunicorn = "^21.2.0"
scipy = "^1.12.0"
numpy = "^1.26.4"
shapely = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
